Fix table cells overflowing on tiny FS screens

--- a/less/app.less
+++ b/less/app.less
@@ -45,6 +45,7 @@
 }
 .table > tbody > tr > td {
   vertical-align: middle;
+  overflow-wrap: break-word;
 }
 
 .container {
